objects/Dummy_Contact__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <description>Cadence</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>cadence</description>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>cadence</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_ID__c</fullName>
        <label>Host ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title_Role__c</fullName>
        <label>Job Title Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Address__c</fullName>
        <label>Main Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <label>Organization ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Key__c</fullName>
        <label>Ref Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Dummy Contact</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>